--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -98,9 +98,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_EditSketch.svg&amp;filetimestamp=20231231201543&amp;.html" class="mw-file-description"><img src="../File/Sketcher_EditSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_EditSketch.html" title="Sketcher EditSketch">Upravit n&aacute;&#269;rt</a>: Otev&#345;e dialogov&eacute; okno Sketcheru pro &uacute;pravu existuj&iacute;c&iacute;ho n&aacute;&#269;rtu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_MapSketch.svg&amp;filetimestamp=20231231201639&amp;.html" class="mw-file-description"><img src="../File/Sketcher_MapSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_MapSketch.html" title="Sketcher MapSketch">P&#345;ipojit n&aacute;&#269;rt</a>: P&#345;ipoj&iacute; n&aacute;&#269;rt k vybran&eacute; geometrii.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ReorientSketch.svg&amp;filetimestamp=20231231201806&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ReorientSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ReorientSketch.html" title="Sketcher ReorientSketch">P&#345;eorientovat skicu</a>: Um&iacute;st&iacute; skicu na jednu z hlavn&iacute;ch rovin s voliteln&yacute;m odsazen&iacute;m. Lze tak&eacute; pou&#382;&iacute;t k odd&#283;len&iacute; n&aacute;&#269;rtu.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ValidateSketch.svg&amp;filetimestamp=20231231201854&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ValidateSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Validate Sketch</a>: Can analyze and repair a sketch that is no longer editable or has invalid constraints, or add missing coincident constraints.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ValidateSketch.svg&amp;filetimestamp=20231231201854&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ValidateSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Ov&#283;&#345;it n&aacute;&#269;rt</a>: Um&iacute; analyzovat a opravit n&aacute;&#269;rt, kter&yacute; ji&#382; nelze upravovat nebo m&aacute; neplatn&aacute; omezen&iacute;, nebo p&#345;idat chyb&#283;j&iacute;c&iacute; shodn&aacute; omezen&iacute;.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_MergeSketches.svg&amp;filetimestamp=20240101165337&amp;.html" class="mw-file-description"><img src="../File/Sketcher_MergeSketches.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_MergeSketches.html" title="Sketcher MergeSketches">Merge Sketches</a>: Merges two or more sketches.</li></ul>
 </div>
@@ -796,13 +794,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118111244
+Cached time: 20260118111420
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.462 seconds
-Real time usage: 0.721 seconds
-Preprocessor visited node count: 1559/1000000
+CPU time usage: 0.404 seconds
+Real time usage: 0.564 seconds
+Preprocessor visited node count: 1558/1000000
 Post&#8208;expand include size: 35120/2097152 bytes
 Template argument size: 9812/2097152 bytes
 Highest expansion depth: 7/100
@@ -812,19 +810,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.899      1 -total
- 24.74%   14.327      1 Template:Sketcher_Tools_navi/cs
- 24.43%   14.145      2 Template:Navigation_menu_2
- 16.22%    9.393      1 Template:Userdocnavi/cs
- 12.80%    7.412      2 Template:Docnav
-  9.94%    5.758      6 Template:Caption
-  6.38%    3.692     36 Template:Version
-  5.39%    3.122      1 Template:PropertyView
-  4.40%    2.550      1 Template:TOCright
-  3.51%    2.034     14 Template:KEY
+100.00%   47.453      1 -total
+ 18.22%    8.646      1 Template:Sketcher_Tools_navi/cs
+ 11.34%    5.383      2 Template:Navigation_menu_2
+ 10.28%    4.877      8 Template:VersionPlus
+ 10.27%    4.873      1 Template:Userdocnavi/cs
+ 10.24%    4.858      2 Template:Docnav
+  8.61%    4.085     36 Template:Version
+  8.26%    3.920      1 Template:PropertyView
+  4.82%    2.285      6 Template:Caption
+  4.52%    2.143      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118111243 and revision id 1740235. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118111420 and revision id 1740237. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
