--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -100,9 +100,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ReorientSketch.svg&amp;filetimestamp=20231231201806&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ReorientSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ReorientSketch.html" title="Sketcher ReorientSketch">P&#345;eorientovat skicu</a>: Um&iacute;st&iacute; skicu na jednu z hlavn&iacute;ch rovin s voliteln&yacute;m odsazen&iacute;m. Lze tak&eacute; pou&#382;&iacute;t k odd&#283;len&iacute; n&aacute;&#269;rtu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ValidateSketch.svg&amp;filetimestamp=20231231201854&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ValidateSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Ov&#283;&#345;it n&aacute;&#269;rt</a>: Um&iacute; analyzovat a opravit n&aacute;&#269;rt, kter&yacute; ji&#382; nelze upravovat nebo m&aacute; neplatn&aacute; omezen&iacute;, nebo p&#345;idat chyb&#283;j&iacute;c&iacute; shodn&aacute; omezen&iacute;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_MergeSketches.svg&amp;filetimestamp=20240101165337&amp;.html" class="mw-file-description"><img src="../File/Sketcher_MergeSketches.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_MergeSketches.html" title="Sketcher MergeSketches">Slou&#269;it n&aacute;&#269;rtky</a>: Slou&#269;&iacute; dva nebo v&iacute;ce n&aacute;&#269;rtk&#367;.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_MirrorSketch.svg&amp;filetimestamp=20231231201710&amp;.html" class="mw-file-description"><img src="../File/Sketcher_MirrorSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_MirrorSketch.html" title="Sketcher MirrorSketch">Mirror Sketch</a>: Mirrors sketches across their X-axis, Y-axis, or origin.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_MirrorSketch.svg&amp;filetimestamp=20231231201710&amp;.html" class="mw-file-description"><img src="../File/Sketcher_MirrorSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_MirrorSketch.html" title="Sketcher MirrorSketch">Zrcadlen&iacute; n&aacute;&#269;rtu</a>: Zrcadl&iacute; n&aacute;&#269;rty podle osy X, osy Y nebo po&#269;&aacute;tku.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h4><span class="mw-headline" id="Edit_Mode_toolbar">Edit Mode toolbar</span></h4>
 </div>
@@ -792,13 +790,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118111451
+Cached time: 20260118111537
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.427 seconds
-Real time usage: 0.607 seconds
-Preprocessor visited node count: 1557/1000000
+CPU time usage: 0.448 seconds
+Real time usage: 0.581 seconds
+Preprocessor visited node count: 1556/1000000
 Post&#8208;expand include size: 35120/2097152 bytes
 Template argument size: 9812/2097152 bytes
 Highest expansion depth: 7/100
@@ -808,19 +806,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.881      1 -total
- 23.97%    7.883      1 Template:Sketcher_Tools_navi/cs
- 14.94%    4.911      2 Template:Navigation_menu_2
- 13.36%    4.394      1 Template:PropertyView
- 12.21%    4.015      1 Template:Userdocnavi/cs
-  8.21%    2.698      1 Template:Variable
-  7.90%    2.597      2 Template:Docnav
-  7.09%    2.332      6 Template:Caption
-  6.67%    2.193     36 Template:Version
-  4.53%    1.488      1 Template:TOCright
+100.00%   33.291      1 -total
+ 21.13%    7.035      1 Template:Sketcher_Tools_navi/cs
+ 15.26%    5.081      2 Template:Navigation_menu_2
+ 12.83%    4.270      1 Template:Userdocnavi/cs
+ 11.50%    3.829     36 Template:Version
+ 10.71%    3.566      1 Template:PropertyView
+  6.97%    2.319      6 Template:Caption
+  6.61%    2.202      2 Template:Docnav
+  5.77%    1.921      1 Template:Variable
+  5.52%    1.839      5 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118111451 and revision id 1740239. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118111537 and revision id 1740241. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
