--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -101,9 +101,9 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ValidateSketch.svg&amp;filetimestamp=20231231201854&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ValidateSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Ov&#283;&#345;it n&aacute;&#269;rt</a>: Um&iacute; analyzovat a opravit n&aacute;&#269;rt, kter&yacute; ji&#382; nelze upravovat nebo m&aacute; neplatn&aacute; omezen&iacute;, nebo p&#345;idat chyb&#283;j&iacute;c&iacute; shodn&aacute; omezen&iacute;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_MergeSketches.svg&amp;filetimestamp=20240101165337&amp;.html" class="mw-file-description"><img src="../File/Sketcher_MergeSketches.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_MergeSketches.html" title="Sketcher MergeSketches">Slou&#269;it n&aacute;&#269;rtky</a>: Slou&#269;&iacute; dva nebo v&iacute;ce n&aacute;&#269;rtk&#367;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_MirrorSketch.svg&amp;filetimestamp=20231231201710&amp;.html" class="mw-file-description"><img src="../File/Sketcher_MirrorSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_MirrorSketch.html" title="Sketcher MirrorSketch">Zrcadlen&iacute; n&aacute;&#269;rtu</a>: Zrcadl&iacute; n&aacute;&#269;rty podle osy X, osy Y nebo po&#269;&aacute;tku.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h4><span class="mw-headline" id="Edit_Mode_toolbar">Edit Mode toolbar</span></h4>
-</div>
+<p><span id="Edit_Mode_toolbar"></span>
+</p>
+<h4><span id="N.C3.A1strojov.C3.A1_li.C5.A1ta_re.C5.BEimu_.C3.BAprav"></span><span class="mw-headline" id="N&aacute;strojov&aacute;_li&scaron;ta_re&#382;imu_&uacute;prav">N&aacute;strojov&aacute; li&scaron;ta re&#382;imu &uacute;prav</span></h4>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_LeaveSketch.svg&amp;filetimestamp=20231231201626&amp;.html" class="mw-file-description"><img src="../File/Sketcher_LeaveSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_LeaveSketch.html" title="Sketcher LeaveSketch">Leave Sketch</a>: Finishes sketch edit mode and closes the <a href="../Sketcher_Dialog.html" title="Sketcher Dialog">Sketcher Dialog</a>.</li></ul>
 </div>
@@ -790,12 +790,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118111537
+Cached time: 20260118111610
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.448 seconds
-Real time usage: 0.581 seconds
+CPU time usage: 0.401 seconds
+Real time usage: 0.578 seconds
 Preprocessor visited node count: 1556/1000000
 Post&#8208;expand include size: 35120/2097152 bytes
 Template argument size: 9812/2097152 bytes
@@ -806,19 +806,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.291      1 -total
- 21.13%    7.035      1 Template:Sketcher_Tools_navi/cs
- 15.26%    5.081      2 Template:Navigation_menu_2
- 12.83%    4.270      1 Template:Userdocnavi/cs
- 11.50%    3.829     36 Template:Version
- 10.71%    3.566      1 Template:PropertyView
-  6.97%    2.319      6 Template:Caption
-  6.61%    2.202      2 Template:Docnav
-  5.77%    1.921      1 Template:Variable
-  5.52%    1.839      5 Template:MenuCommand
+100.00%   32.191      1 -total
+ 24.97%    8.038      1 Template:Sketcher_Tools_navi/cs
+ 15.66%    5.042      2 Template:Navigation_menu_2
+ 13.66%    4.396      1 Template:Userdocnavi/cs
+ 10.93%    3.520      1 Template:PropertyView
+  9.41%    3.030      2 Template:Docnav
+  6.48%    2.085     36 Template:Version
+  6.15%    1.980      6 Template:Caption
+  6.03%    1.942      1 Template:Variable
+  5.02%    1.616     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118111537 and revision id 1740241. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118111610 and revision id 1740243. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
