--- a/wiki/fr/TechDraw_CommandAddOffsetVertex.html
+++ b/wiki/fr/TechDraw_CommandAddOffsetVertex.html
@@ -22,7 +22,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Lignes centrales/filetages &rarr; Ajouter un sommet d&eacute;cal&eacute;
+<td class="ctEven">TechDraw &rarr; Taraudages/filetages/cosm&eacute;tiques &rarr; Ajouter un sommet d&eacute;cal&eacute;
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -114,15 +114,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117143939
+Cached time: 20260118111929
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.071 seconds
-Real time usage: 0.104 seconds
+CPU time usage: 0.070 seconds
+Real time usage: 0.129 seconds
 Preprocessor visited node count: 358/1000000
-Post&#8208;expand include size: 25958/2097152 bytes
-Template argument size: 10015/2097152 bytes
+Post&#8208;expand include size: 25972/2097152 bytes
+Template argument size: 10029/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -130,18 +130,18 @@ Unstrip post&#8208;expand size: 1397/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.507      1 -total
- 42.27%    9.091      1 Template:TechDraw_Tools_navi/fr
- 26.15%    5.625      2 Template:Navigation_menu_2
- 19.08%    4.103      1 Template:Userdocnavi/fr
- 10.49%    2.256      2 Template:Docnav/fr
-  9.79%    2.105      1 Template:GuiCommand/fr
-  5.65%    1.216      1 Template:Caption
-  4.90%    1.054      3 Template:MenuCommand
-  4.89%    1.051      2 Template:Button
+100.00%   25.101      1 -total
+ 26.71%    6.705      1 Template:TechDraw_Tools_navi/fr
+ 21.53%    5.405      1 Template:Userdocnavi/fr
+ 19.10%    4.794      2 Template:Navigation_menu_2
+ 13.68%    3.434      2 Template:Docnav/fr
+  9.08%    2.280      1 Template:Caption
+  9.07%    2.277      3 Template:MenuCommand
+  8.60%    2.158      2 Template:Button
+  8.48%    2.129      1 Template:GuiCommand/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:330541-0!canonical and timestamp 20260117143939 and revision id 1739562. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:330541-0!canonical and timestamp 20260118111929 and revision id 1740253. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
