--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -106,9 +106,7 @@
 <h4><span id="N.C3.A1strojov.C3.A1_li.C5.A1ta_re.C5.BEimu_.C3.BAprav"></span><span class="mw-headline" id="N&aacute;strojov&aacute;_li&scaron;ta_re&#382;imu_&uacute;prav">N&aacute;strojov&aacute; li&scaron;ta re&#382;imu &uacute;prav</span></h4>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_LeaveSketch.svg&amp;filetimestamp=20231231201626&amp;.html" class="mw-file-description"><img src="../File/Sketcher_LeaveSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_LeaveSketch.html" title="Sketcher LeaveSketch">Opustit n&aacute;&#269;rt</a>: Ukon&#269;&iacute; re&#382;im &uacute;prav n&aacute;&#269;rtu a zav&#345;e <a href="../Sketcher_Dialog.html" title="Sketcher Dialog">dialogov&eacute; okno Sketcher</a>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ViewSketch.svg&amp;filetimestamp=20231231201925&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ViewSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ViewSketch.html" title="Sketcher ViewSketch">Zarovnat pohled ke skice</a>: Zarovn&aacute; <a href="../3D_View.html" title="3D View">3D pohled</a> ke skice.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ViewSection.svg&amp;filetimestamp=20231231201908&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ViewSection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ViewSection.html" title="Sketcher ViewSection">Toggle Section View</a>: Toggles a temporary section plane that hides any objects and parts of objects in front of the sketch plane.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ViewSection.svg&amp;filetimestamp=20231231201908&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ViewSection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ViewSection.html" title="Sketcher ViewSection">P&#345;epnout zobrazen&iacute; sekce</a>: P&#345;epne do&#269;asnou rovinu sekce, kter&aacute; skryje v&scaron;echny objekty a &#269;&aacute;sti objekt&#367; p&#345;ed rovinou n&aacute;&#269;rtu.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h4><span class="mw-headline" id="Other">Other</span></h4>
 </div>
@@ -786,13 +784,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118111821
+Cached time: 20260118111936
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.409 seconds
-Real time usage: 0.573 seconds
-Preprocessor visited node count: 1554/1000000
+CPU time usage: 0.433 seconds
+Real time usage: 0.866 seconds
+Preprocessor visited node count: 1553/1000000
 Post&#8208;expand include size: 35120/2097152 bytes
 Template argument size: 9812/2097152 bytes
 Highest expansion depth: 7/100
@@ -802,19 +800,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.998      1 -total
- 25.65%   10.004      1 Template:Sketcher_Tools_navi/cs
- 18.56%    7.238      2 Template:Navigation_menu_2
- 15.93%    6.213      1 Template:Userdocnavi/cs
- 12.30%    4.798      1 Template:PropertyView
-  6.91%    2.695     36 Template:Version
-  6.45%    2.515      2 Template:Docnav
-  4.98%    1.941      6 Template:Caption
-  4.94%    1.925     14 Template:KEY
-  4.79%    1.869      1 Template:Variable
+100.00%   40.390      1 -total
+ 30.34%   12.255      1 Template:Sketcher_Tools_navi/cs
+ 16.97%    6.856      2 Template:Navigation_menu_2
+ 16.31%    6.588      1 Template:Userdocnavi/cs
+  7.81%    3.154      1 Template:PropertyView
+  6.14%    2.479     36 Template:Version
+  5.96%    2.409      2 Template:Docnav
+  4.72%    1.908      6 Template:Caption
+  4.53%    1.831     14 Template:KEY
+  3.69%    1.490      8 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118111820 and revision id 1740249. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118111935 and revision id 1740255. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
