--- a/wiki/fr/TechDraw_CommandAddOffsetVertex.html
+++ b/wiki/fr/TechDraw_CommandAddOffsetVertex.html
@@ -62,7 +62,7 @@
 <ol><li>S&eacute;lectionnez un sommet.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyer sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_CommandAddOffsetVertex.svg&amp;filetimestamp=20240708183449&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ajouter un sommet d&eacute;cal&eacute;</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Lignes centrales/filetages &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_CommandAddOffsetVertex.svg&amp;filetimestamp=20240708183449&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ajouter un sommet d&eacute;cal&eacute;</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Taraudages/filetages/cosm&eacute;tiques &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_CommandAddOffsetVertex.svg&amp;filetimestamp=20240708183449&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ajouter un sommet d&eacute;cal&eacute;</b> du menu.</li></ul></li>
 <li>Un panneau de t&acirc;ches s'ouvre.</li>
 <li>Entrez le <b>D&eacute;calage en X</b> souhait&eacute; (positif ou n&eacute;gatif) et le <b>D&eacute;calage en Y</b> en mm.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li>
@@ -114,15 +114,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118111929
+Cached time: 20260118111954
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.070 seconds
-Real time usage: 0.129 seconds
+CPU time usage: 0.076 seconds
+Real time usage: 0.115 seconds
 Preprocessor visited node count: 358/1000000
-Post&#8208;expand include size: 25972/2097152 bytes
-Template argument size: 10029/2097152 bytes
+Post&#8208;expand include size: 25979/2097152 bytes
+Template argument size: 10036/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -130,18 +130,18 @@ Unstrip post&#8208;expand size: 1397/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.101      1 -total
- 26.71%    6.705      1 Template:TechDraw_Tools_navi/fr
- 21.53%    5.405      1 Template:Userdocnavi/fr
- 19.10%    4.794      2 Template:Navigation_menu_2
- 13.68%    3.434      2 Template:Docnav/fr
-  9.08%    2.280      1 Template:Caption
-  9.07%    2.277      3 Template:MenuCommand
-  8.60%    2.158      2 Template:Button
-  8.48%    2.129      1 Template:GuiCommand/fr
+100.00%   21.840      1 -total
+ 33.01%    7.209      1 Template:TechDraw_Tools_navi/fr
+ 24.13%    5.270      2 Template:Navigation_menu_2
+ 16.13%    3.522      1 Template:GuiCommand/fr
+ 15.59%    3.404      1 Template:Userdocnavi/fr
+ 13.38%    2.922      2 Template:Docnav/fr
+  7.92%    1.730      1 Template:Caption
+  5.82%    1.270      2 Template:Button
+  5.12%    1.118      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:330541-0!canonical and timestamp 20260118111929 and revision id 1740253. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:330541-0!canonical and timestamp 20260118111953 and revision id 1740257. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
