--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -107,9 +107,9 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_LeaveSketch.svg&amp;filetimestamp=20231231201626&amp;.html" class="mw-file-description"><img src="../File/Sketcher_LeaveSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_LeaveSketch.html" title="Sketcher LeaveSketch">Opustit n&aacute;&#269;rt</a>: Ukon&#269;&iacute; re&#382;im &uacute;prav n&aacute;&#269;rtu a zav&#345;e <a href="../Sketcher_Dialog.html" title="Sketcher Dialog">dialogov&eacute; okno Sketcher</a>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ViewSketch.svg&amp;filetimestamp=20231231201925&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ViewSketch.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ViewSketch.html" title="Sketcher ViewSketch">Zarovnat pohled ke skice</a>: Zarovn&aacute; <a href="../3D_View.html" title="3D View">3D pohled</a> ke skice.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ViewSection.svg&amp;filetimestamp=20231231201908&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ViewSection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ViewSection.html" title="Sketcher ViewSection">P&#345;epnout zobrazen&iacute; sekce</a>: P&#345;epne do&#269;asnou rovinu sekce, kter&aacute; skryje v&scaron;echny objekty a &#269;&aacute;sti objekt&#367; p&#345;ed rovinou n&aacute;&#269;rtu.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h4><span class="mw-headline" id="Other">Other</span></h4>
-</div>
+<p><span id="Other"></span>
+</p>
+<h4><span id="Ostatn.C3.AD"></span><span class="mw-headline" id="Ostatn&iacute;">Ostatn&iacute;</span></h4>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_StopOperation.svg&amp;filetimestamp=20201015163520&amp;.html" class="mw-file-description"><img src="../File/Sketcher_StopOperation.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_StopOperation.html" title="Sketcher StopOperation">Stop Operation</a>: Stops any currently running geometry or constraint creation tool.</li></ul>
 </div>
@@ -784,12 +784,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118111936
+Cached time: 20260118112001
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.433 seconds
-Real time usage: 0.866 seconds
+CPU time usage: 0.465 seconds
+Real time usage: 0.794 seconds
 Preprocessor visited node count: 1553/1000000
 Post&#8208;expand include size: 35120/2097152 bytes
 Template argument size: 9812/2097152 bytes
@@ -800,19 +800,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.390      1 -total
- 30.34%   12.255      1 Template:Sketcher_Tools_navi/cs
- 16.97%    6.856      2 Template:Navigation_menu_2
- 16.31%    6.588      1 Template:Userdocnavi/cs
-  7.81%    3.154      1 Template:PropertyView
-  6.14%    2.479     36 Template:Version
-  5.96%    2.409      2 Template:Docnav
-  4.72%    1.908      6 Template:Caption
-  4.53%    1.831     14 Template:KEY
-  3.69%    1.490      8 Template:VersionPlus
+100.00%   49.499      1 -total
+ 25.21%   12.480      1 Template:Sketcher_Tools_navi/cs
+ 13.94%    6.902      1 Template:Userdocnavi/cs
+ 11.03%    5.462      2 Template:Navigation_menu_2
+ 10.21%    5.052      1 Template:PropertyView
+  8.65%    4.281     36 Template:Version
+  5.89%    2.917      6 Template:Caption
+  5.67%    2.805      2 Template:Docnav
+  5.52%    2.734      8 Template:VersionPlus
+  5.49%    2.716     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118111935 and revision id 1740255. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118112000 and revision id 1740259. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
