--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -110,9 +110,7 @@
 <p><span id="Other"></span>
 </p>
 <h4><span id="Ostatn.C3.AD"></span><span class="mw-headline" id="Ostatn&iacute;">Ostatn&iacute;</span></h4>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_StopOperation.svg&amp;filetimestamp=20201015163520&amp;.html" class="mw-file-description"><img src="../File/Sketcher_StopOperation.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_StopOperation.html" title="Sketcher StopOperation">Stop Operation</a>: Stops any currently running geometry or constraint creation tool.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_StopOperation.svg&amp;filetimestamp=20201015163520&amp;.html" class="mw-file-description"><img src="../File/Sketcher_StopOperation.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_StopOperation.html" title="Sketcher StopOperation">Zastavit operaci</a>: Zastav&iacute; v&scaron;echny aktu&aacute;ln&#283; spu&scaron;t&#283;n&eacute; n&aacute;stroje pro tvorbu geometrie nebo omezen&iacute;.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><a href="../Sketcher_Grid.html" title="Sketcher Grid">Grid</a>: Grid settings can be changed in the menu of the <a href="../Sketcher_Dialog.html#Sketch_Edit" title="Sketcher Dialog">Sketch Edit section of the Sketcher Dialog</a>.</li></ul>
 </div>
@@ -784,13 +782,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118112001
+Cached time: 20260118112049
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.465 seconds
-Real time usage: 0.794 seconds
-Preprocessor visited node count: 1553/1000000
+CPU time usage: 0.390 seconds
+Real time usage: 0.662 seconds
+Preprocessor visited node count: 1552/1000000
 Post&#8208;expand include size: 35120/2097152 bytes
 Template argument size: 9812/2097152 bytes
 Highest expansion depth: 7/100
@@ -800,19 +798,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   49.499      1 -total
- 25.21%   12.480      1 Template:Sketcher_Tools_navi/cs
- 13.94%    6.902      1 Template:Userdocnavi/cs
- 11.03%    5.462      2 Template:Navigation_menu_2
- 10.21%    5.052      1 Template:PropertyView
-  8.65%    4.281     36 Template:Version
-  5.89%    2.917      6 Template:Caption
-  5.67%    2.805      2 Template:Docnav
-  5.52%    2.734      8 Template:VersionPlus
-  5.49%    2.716     14 Template:KEY
+100.00%   34.030      1 -total
+ 22.93%    7.802      1 Template:Sketcher_Tools_navi/cs
+ 14.70%    5.001      2 Template:Navigation_menu_2
+ 11.80%    4.015      1 Template:PropertyView
+ 11.47%    3.904      1 Template:Userdocnavi/cs
+  9.05%    3.080      8 Template:VersionPlus
+  7.11%    2.420     36 Template:Version
+  6.19%    2.108      1 Template:Variable
+  6.11%    2.079     14 Template:KEY
+  6.06%    2.061      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118112000 and revision id 1740259. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118112048 and revision id 1740261. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
